@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-17T08:22:12Z",
+  "timestamp" : "2024-04-17T16:24:17Z",
   "count_outdated" : 736,
   "uniques_outdated" : 356,
-  "count" : 740,
-  "uniques" : 360,
+  "count" : 741,
+  "uniques" : 361,
   "clones" : [
     {
       "timestamp": "2024-04-14T00:00:00Z",
@@ -34,12 +34,12 @@
     },
     {
       "timestamp": "2024-04-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
