@@ -1,5 +1,5 @@
 {
-  "count": 4,
+  "count": 5,
   "uniques": 3,
   "clones": [
     {
@@ -19,8 +19,8 @@
     },
     {
       "timestamp": "2024-04-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
