@@ -1,3 +1,12 @@
+2024-04-17T16:24:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8725378358 # 191
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
+* notice: last 14d: unq all: 3 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 356 736 / 360 740
+* notice: next accum: outdated-unq outdated-all / unq all: 356 736 / 361 741
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-04-17]
+
 2024-04-17T08:22:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8718650296 # 190
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
